--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "publish": "npm publish --access public"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^7.11.0",
+    "eslint-plugin-security": "^1.4.0",
+    "jest": "^26.6.0"
   },
   "keywords": [
     "API distribution",
