--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "publish": "npm publish --access public"
