--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reqhub",
-  "version": "1.1.5",
+  "version": "2.0.0",
   "author": "SpaceGiraffe, LLC",
   "description": "ReqHub middleware for NodeJs projects. Distribute your API using the ReqHub platform in just a few lines! For more information, visit https://reqhub.io/.",
   "homepage": "https://github.com/SpaceGiraffe-io/ReqHubNode#readme",
@@ -17,13 +17,13 @@
     "lint": "eslint .",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "publish": "npm publish --access public"
+    "publish": "npm run test && npm run lint && npm publish --access public"
   },
   "dependencies": {
     "crypto-js": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.11.0",
+    "eslint": "^8.4.1",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^26.6.0"
   },
